--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!--HEADER-->
-    <header id="home">
+    <header id="home"> <!--home-->
         <div class="container">
             <div class="logo-text">
                 <h1>Let's <span>HIKE</span> together</h1>
@@ -29,7 +29,7 @@
         </nav>
         </div>
     </header>
-    <!--MAIN-->
+    <!--MAIN-->     
     <main >
         <div class="container">
             <div class="banner-card">
